--- a/Tool1V3.html
+++ b/Tool1V3.html
@@ -588,7 +588,8 @@
   // CONFIG
   // =========================
   // Paste your deployed Google Apps Script Web App URL here:
-  const SCRIPT_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
+  const SCRIPT_URL = "https://script.google.com/a/macros/fleming.kyschools.us/s/AKfycbzNVN8AiQzPBzE1CMdDzy9bWGzlq9_p4qALlzwuEDkUxIzazgIHK70pS61nswTX0T_B6w/exec";
+;
 
   const STORAGE_KEY = "fcs_weekly_exec_review_collab_v1";
 
